# agl-monitor-flake

./: .gitignore  flake.nix  manage.py  pyproject.toml
.direnv/: flake-profile
_agl_monitor/: manage.py
_agl_monitor/agl_monitor/: urls.py
_agl_monitor/content_management/: views.py
_agl_monitor/content_management/templates/: landing_page.html
_agl_monitor/user_authentication/: adapters.py  decorators.py  urls.py  views.py
_agl_monitor/user_authentication/migrations/: 0003_initial.py
_agl_monitor/user_authentication/templates/: user_status.html
agl_monitor/: _settings.py  asgi.py  result  run_celery_beat.py  run_celery_worker.py  run_gunicorn.py  wsgi.py
agl_monitor/agl_monitor/: asgi.py  celery.py  initial_settings.py  urls.py  wsgi.py
agl_monitor/agl_monitor/settings_base/: __init__.py  logging_conf.py  static.py
agl_monitor/content_management/: urls.py
agl_monitor/content_management/templates/: base.html
agl_monitor/content_management/templatetags/: user_tags.py
agl_monitor/network_devices/: apps.py
agl_monitor/settings_base/: __init__.py  base_urls.py  celery.py  cookiebanner.py  internationalization.py
agl_monitor/settings_base/oauth/: __init__.py  django_settings.py
agl_monitor/settings_dev/: __init__.py
agl_monitor/settings_prod/: __init__.py  celery.py
agl_monitor/settings_prod/celery_schedule/: __init__.py  ping_network_devices.py
agl_monitor/user_authentication/: models.py
agl_monitor/user_authentication/migrations/: 0001_initial.py  0002_delete_userinformation.py
(+6 files in other folders)
